--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MQDH</title>
 
-  <!-- Tipografía -->
   <link href="https://fonts.googleapis.com/css2?family=Liberation+Sans:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
@@ -21,25 +20,31 @@
       font-family: "Liberation Sans", system-ui, sans-serif;
       color: #ffffff;
       text-transform: uppercase;
+      overflow: hidden;
     }
 
     .texto {
       display: flex;
       align-items: flex-end;
+      justify-content: center;
       font-weight: 700;
       letter-spacing: -0.08em;
       user-select: none;
+      max-width: 100vw;
     }
 
     .texto.cambiado {
-      font-size: 2.4rem;
+      font-size: clamp(1.4rem, 4vw, 2.4rem);
       letter-spacing: 0.08em;
+      flex-wrap: wrap;
+      text-align: center;
     }
 
     .texto span {
       line-height: 1;
       cursor: pointer;
       transition: color 0.15s ease, transform 0.15s ease, opacity 0.3s ease;
+      padding: 0 0.02em;
     }
 
     .blink {
@@ -51,11 +56,17 @@
       50% { opacity: 0.4; }
     }
 
-    /* Tamaños triangulares */
-    .m { font-size: 4rem; }
-    .q { font-size: 7rem; }
-    .d { font-size: 7rem; }
-    .h { font-size: 4rem; }
+    /* Escala responsive tipo triángulo */
+    .m { font-size: clamp(3rem, 8vw, 4rem); }
+    .q { font-size: clamp(5rem, 14vw, 7rem); }
+    .d { font-size: clamp(5rem, 14vw, 7rem); }
+    .h { font-size: clamp(3rem, 8vw, 4rem); }
+
+    @media (max-width: 480px) {
+      .texto {
+        letter-spacing: -0.06em;
+      }
+    }
   </style>
 </head>
 <body>
@@ -106,23 +117,18 @@
       const letras = logo.querySelectorAll('span');
 
       letras.forEach((letra, i) => {
-        if (letra.dataset.letter === '.') {
-          letra.classList.add('blink');
-        }
+        if (letra.dataset.letter === '.') letra.classList.add('blink');
 
         letra.onclick = () => {
           if (audioCtx.state === 'suspended') audioCtx.resume();
 
           letra.style.color = colores[Math.floor(Math.random() * colores.length)];
-          letra.style.transform = 'translateY(-0.15em)';
+          letra.style.transform = 'translateY(-0.12em)';
 
           const valor = letra.dataset.letter;
-
           playClick(300 + i * 100);
 
-          setTimeout(() => {
-            letra.style.transform = 'translateY(0)';
-          }, 120);
+          setTimeout(() => letra.style.transform = 'translateY(0)', 120);
 
           if (valor === '.') {
             volverInicio();
@@ -133,9 +139,7 @@
           if (valor === esperadoMQDH) {
             playBell(bufferMQDH.length);
             bufferMQDH.push(valor);
-          } else {
-            bufferMQDH = [];
-          }
+          } else bufferMQDH = [];
 
           if (bufferMQDH.length === secuenciaMQDH.length) {
             cambiarTexto('MUSICA QUE DISFRUTO HACER');
@@ -146,9 +150,7 @@
           if (valor === esperadoFECHA) {
             playBell(bufferFECHA.length);
             bufferFECHA.push(valor);
-          } else {
-            bufferFECHA = [];
-          }
+          } else bufferFECHA = [];
 
           if (bufferFECHA.length === secuenciaFECHA.length) {
             cambiarTexto('19/03 PARTE 1.');
