--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@ html,body{
   z-index:2;
   display:flex;
   align-items:flex-end;
+  justify-content:center;
   font-weight:700;
   letter-spacing:-0.08em;
   user-select:none;
+  flex-wrap:nowrap;
 }
 
 .texto.cambiado{
@@ -86,21 +88,18 @@ input.hidden{
 }
 </style>
 </head>
-
 <body>
 
 <div id="sky"></div>
-
 <div class="texto" id="logo"></div>
-
 <input id="hiddenInput" class="hidden" autocomplete="off">
 
 <script>
-const logo = document.getElementById("logo");
-const sky = document.getElementById("sky");
-const input = document.getElementById("hiddenInput");
+const logo=document.getElementById('logo');
+const sky=document.getElementById('sky');
+const input=document.getElementById('hiddenInput');
 
-const combinaciones = {
+const combinaciones={
   punk:{t:"CERCA PERO NO HABRA AQUI.",c:["#ff6b6b","#c44536","#f19066"]},
   trap:{t:"HABRA UNA.",c:["#54a0ff","#2e86de","#341f97"]},
   acustica:{t:"NO SE DE SENTIMIENTOS PERO SI.",c:["#feca57","#ff9f43"]},
@@ -118,74 +117,73 @@ let bufferClick="";
 let bufferKey="";
 
 function renderMQDH(){
-  logo.className="texto";
+  logo.className='texto';
   logo.innerHTML=`
     <span class="m" data-letter="m">M</span>
     <span class="q" data-letter="q">Q</span>
     <span class="d" data-letter="d">D</span>
-    <span class="h" data-letter="h">H</span>
-  `;
+    <span class="h" data-letter="h">H</span>`;
 }
 
 function randomColor(key){
-  const c=combinaciones[key]?.c||["#fff"];
-  return c[Math.floor(Math.random()*c.length)];
+  const p=combinaciones[key]?.c||['#fff'];
+  return p[Math.floor(Math.random()*p.length)];
 }
 
 function cambiarTexto(text,key){
-  logo.classList.add("cambiado");
-  logo.innerHTML="";
-  text.split("").forEach(ch=>{
-    const s=document.createElement("span");
-    s.textContent=ch===" "?" ":ch;
+  logo.classList.add('cambiado');
+  logo.innerHTML='';
+  text.split('').forEach(ch=>{
+    const s=document.createElement('span');
+    s.textContent=ch===' '?' ':ch;
     s.style.color=randomColor(key);
-    if(ch===".") s.classList.add("blink");
-    s.onclick=()=>{ if(ch===".") renderMQDH(); };
+    if(ch==='.') s.classList.add('blink');
+    s.onclick=()=>{ if(ch==='.') renderMQDH(); };
     logo.appendChild(s);
   });
   if(key) guardarEstrella(key);
 }
 
 function guardarEstrella(key){
-  const data=JSON.parse(localStorage.getItem("mqdh-stars")||"[]");
-  if(data.find(e=>e.key===key)) return;
+  const data=JSON.parse(localStorage.getItem('mqdh-stars')||'[]');
+  if(data.some(e=>e.key===key)) return;
   data.push({key,x:Math.random()*100,y:Math.random()*100});
-  localStorage.setItem("mqdh-stars",JSON.stringify(data));
+  localStorage.setItem('mqdh-stars',JSON.stringify(data));
   dibujarEstrellas();
 }
 
 function dibujarEstrellas(){
-  sky.innerHTML="";
-  const data=JSON.parse(localStorage.getItem("mqdh-stars")||"[]");
+  sky.innerHTML='';
+  const data=JSON.parse(localStorage.getItem('mqdh-stars')||'[]');
   data.forEach(e=>{
-    const star=document.createElement("div");
-    star.className="star";
-    star.style.left=e.x+"%";
-    star.style.top=e.y+"%";
+    const star=document.createElement('div');
+    star.className='star';
+    star.style.left=e.x+'%';
+    star.style.top=e.y+'%';
     star.style.background=combinaciones[e.key].c[0];
     star.onclick=()=>cambiarTexto(combinaciones[e.key].t,e.key);
     sky.appendChild(star);
   });
 }
 
-logo.addEventListener("click",e=>{
+logo.addEventListener('click',e=>{
   const l=e.target.dataset?.letter;
   if(!l) return;
   bufferClick+=l;
-  if(bufferClick.endsWith("chat")){
+  if(bufferClick.endsWith('chat')){
     input.focus();
-    bufferClick="";
+    bufferClick='';
   }
 });
 
-input.addEventListener("input",()=>{
+input.addEventListener('input',()=>{
   bufferKey+=input.value.toLowerCase();
-  input.value="";
+  input.value='';
   if(bufferKey.length>30) bufferKey=bufferKey.slice(-30);
   Object.keys(combinaciones).forEach(k=>{
     if(bufferKey.endsWith(k)){
       cambiarTexto(combinaciones[k].t,k);
-      bufferKey="";
+      bufferKey='';
       input.blur();
     }
   });
@@ -194,6 +192,5 @@ input.addEventListener("input",()=>{
 renderMQDH();
 dibujarEstrellas();
 </script>
-
 </body>
 </html>
